--- a/analysis_code/transparency_analysis_script.html
+++ b/analysis_code/transparency_analysis_script.html
@@ -69,29 +69,15 @@ img {
 <p>This document carries out the analysis and diagnostics outlined elsewhere in the repo. For more information, check the README and then contact Eric Kernfeld, <code>ekernf01 (obvious symbol) uw (department of transportation) edu</code>.</p>
 <div id="loading-functions" class="section level3">
 <h3>Loading functions</h3>
-<p>This chunk loads the analysis functions. It overwrites <code>transparency_analysis_functions.R</code> in the process, and it puts a small amount of miscellaneous non-function objects into your namespace. Sorry.</p>
-<pre class="r"><code>#This needs to be changed depending on where you have your clone of the repository.
+<p>This chunk loads the analysis functions. It overwrites <code>transparency_analysis_functions.R</code> in the process, and (with apologies) it puts a small amount of miscellaneous non-function objects into your namespace.</p>
+<p>The string <code>PATH_TO_THIS_FILE</code> needs to be changed depending on where you have your clone of the repository.</p>
+<pre class="r"><code>rm(list = ls())
 PATH_TO_THIS_FILE = &quot;~/Desktop/winter_2016/consulting/Leah Perlmutter (cs)/transparency_analysis/analysis_code/&quot;
-warning(paste(&quot;The path&quot;, PATH_TO_THIS_FILE, &quot;should point to transparency_analysis_functions.Rmd and transparency_analysis_script.Rmd.&quot;))</code></pre>
-<pre><code>## Warning: The path ~/Desktop/winter_2016/consulting/Leah Perlmutter
-## (cs)/transparency_analysis/analysis_code/ should point to
-## transparency_analysis_functions.Rmd and transparency_analysis_script.Rmd.</code></pre>
-<pre class="r"><code>setwd(PATH_TO_THIS_FILE)
-require(knitr)</code></pre>
-<pre><code>## Loading required package: knitr</code></pre>
-<pre class="r"><code>knitr::purl(&quot;transparency_analysis_functions.Rmd&quot;)
+warning(paste(&quot;The path&quot;, PATH_TO_THIS_FILE, &quot;should point to transparency_analysis_functions.Rmd and transparency_analysis_script.Rmd.&quot;))
+setwd(PATH_TO_THIS_FILE)
+require(knitr)
+knitr::purl(&quot;transparency_analysis_functions.Rmd&quot;)
 source(&quot;transparency_analysis_functions.R&quot;)</code></pre>
-<pre><code>## Warning: The path ~/Desktop/winter_2016/consulting/Leah Perlmutter
-## (cs)/transparency_analysis/analysis_code/ should point to
-## transparency_analysis_functions.Rmd and transparency_analysis_script.Rmd.</code></pre>
-<pre><code>## Loading required package: lme4</code></pre>
-<pre><code>## Warning: package 'lme4' was built under R version 3.1.3</code></pre>
-<pre><code>## Loading required package: Matrix
-## Loading required package: car</code></pre>
-<pre><code>## Warning: package 'car' was built under R version 3.1.3</code></pre>
-<pre><code>## Loading required package: assertthat
-## Loading required package: xtable
-## Loading required package: ggplot2</code></pre>
 </div>
 <div id="analysis-function-calls" class="section level3">
 <h3>Analysis function calls</h3>
@@ -109,7 +95,7 @@ source(&quot;transparency_analysis_functions.R&quot;)</code></pre>
 </div>
 <div id="analysis-1" class="section level3">
 <h3>Analysis 1<!-- html table generated in R 3.1.2 by xtable 1.7-4 package --></h3>
-<!-- Sun Jan 24 13:27:36 2016 -->
+<!-- Sun Jan 24 13:55:15 2016 -->
 <table border="1">
 <tr>
 <th>
@@ -226,7 +212,7 @@ number_of_attempts
 </div>
 <div id="analysis-2" class="section level3">
 <h3>Analysis 2<!-- html table generated in R 3.1.2 by xtable 1.7-4 package --></h3>
-<!-- Sun Jan 24 13:27:39 2016 -->
+<!-- Sun Jan 24 13:55:17 2016 -->
 <table border="1">
 <tr>
 <th>
