--- a/analysis_code/transparency_analysis_script.html
+++ b/analysis_code/transparency_analysis_script.html
@@ -96,7 +96,7 @@ source(&quot;transparency_analysis_functions.R&quot;)</code></pre>
 <div id="predictions-by-condition" class="section level5">
 <h5>Predictions by condition</h5>
 <!-- html table generated in R 3.1.2 by xtable 1.7-4 package -->
-<!-- Thu Jan 28 21:19:31 2016 -->
+<!-- Thu Jan 28 21:27:26 2016 -->
 <table border="1">
 <tr>
 <th>
@@ -286,7 +286,7 @@ number_of_attempts
 <div id="predicted-effects-from-changing-between-conditions" class="section level5">
 <h5>Predicted effects from changing between conditions</h5>
 <!-- html table generated in R 3.1.2 by xtable 1.7-4 package -->
-<!-- Thu Jan 28 21:19:31 2016 -->
+<!-- Thu Jan 28 21:27:26 2016 -->
 <table border="1">
 <tr>
 <th>
@@ -503,7 +503,7 @@ number_of_attempts (% change)
 <div id="predictions-by-condition-1" class="section level5">
 <h5>Predictions by condition</h5>
 <!-- html table generated in R 3.1.2 by xtable 1.7-4 package -->
-<!-- Thu Jan 28 21:19:35 2016 -->
+<!-- Thu Jan 28 21:27:30 2016 -->
 <table border="1">
 <tr>
 <th>
@@ -693,7 +693,7 @@ number_of_attempts
 <div id="predicted-effects-from-changing-between-conditions-1" class="section level5">
 <h5>Predicted effects from changing between conditions</h5>
 <!-- html table generated in R 3.1.2 by xtable 1.7-4 package -->
-<!-- Thu Jan 28 21:19:35 2016 -->
+<!-- Thu Jan 28 21:27:30 2016 -->
 <table border="1">
 <tr>
 <th>
@@ -914,16 +914,28 @@ number_of_attempts (% change)
 <pre class="r"><code>print_tests_A1A2()</code></pre>
 <div id="analysis-1-1" class="section level4">
 <h4>Analysis 1<!-- html table generated in R 3.1.2 by xtable 1.7-4 package --></h4>
-<!-- Thu Jan 28 21:19:37 2016 -->
+<!-- Thu Jan 28 21:27:33 2016 -->
 <table border="1">
 <tr>
 <th>
 </th>
 <th>
-H1_transp_effects
+H1_transp_effects_1=3=5
 </th>
 <th>
-H2_transp_after_effects
+H2_transp_after_effects_2=4=6
+</th>
+<th>
+H1_transp_effects_1=3
+</th>
+<th>
+H2_transp_after_effects_2=4
+</th>
+<th>
+H1_transp_effects_1=5
+</th>
+<th>
+H2_transp_after_effects_2=6
 </th>
 <th>
 H3_headset_v_monitor
@@ -935,6 +947,14 @@ H3_headset_v_monitor_aftereffect
 <tr>
 <td align="right">
 language
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
 </td>
 <td>
 </td>
@@ -955,6 +975,14 @@ pointing
 </td>
 <td>
 </td>
+<td>
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+</td>
 <td align="right">
 0.0022
 </td>
@@ -965,6 +993,14 @@ pointing
 <tr>
 <td align="right">
 accuracy
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
 </td>
 <td>
 </td>
@@ -985,6 +1021,14 @@ number_of_words
 </td>
 <td>
 </td>
+<td>
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+</td>
 <td align="right">
 0.5578
 </td>
@@ -995,6 +1039,14 @@ number_of_words
 <tr>
 <td align="right">
 attempt_times
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
 </td>
 <td>
 </td>
@@ -1015,6 +1067,14 @@ completion_times
 </td>
 <td>
 </td>
+<td>
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+</td>
 <td align="right">
 0.5758
 </td>
@@ -1025,6 +1085,14 @@ completion_times
 <tr>
 <td align="right">
 number_of_attempts
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
 </td>
 <td>
 </td>
@@ -1041,16 +1109,28 @@ number_of_attempts
 </div>
 <div id="analysis-2-1" class="section level4">
 <h4>Analysis 2<!-- html table generated in R 3.1.2 by xtable 1.7-4 package --></h4>
-<!-- Thu Jan 28 21:19:40 2016 -->
+<!-- Thu Jan 28 21:27:36 2016 -->
 <table border="1">
 <tr>
 <th>
 </th>
 <th>
-H1_transp_effects
+H1_transp_effects_1=3=5
 </th>
 <th>
-H2_transp_after_effects
+H2_transp_after_effects_2=4=6
+</th>
+<th>
+H1_transp_effects_1=3
+</th>
+<th>
+H2_transp_after_effects_2=4
+</th>
+<th>
+H1_transp_effects_1=5
+</th>
+<th>
+H2_transp_after_effects_2=6
 </th>
 <th>
 H3_headset_v_monitor
@@ -1069,6 +1149,18 @@ language
 <td align="right">
 0.9208
 </td>
+<td align="right">
+0.5947
+</td>
+<td align="right">
+0.8505
+</td>
+<td align="right">
+0.2514
+</td>
+<td align="right">
+0.9397
+</td>
 <td>
 </td>
 <td>
@@ -1083,6 +1175,18 @@ pointing
 </td>
 <td align="right">
 0.7904
+</td>
+<td align="right">
+0.0002
+</td>
+<td align="right">
+0.5646
+</td>
+<td align="right">
+0.0000
+</td>
+<td align="right">
+0.4986
 </td>
 <td>
 </td>
@@ -1099,6 +1203,18 @@ accuracy
 <td align="right">
 0.1879
 </td>
+<td align="right">
+0.0042
+</td>
+<td align="right">
+0.0730
+</td>
+<td align="right">
+0.3141
+</td>
+<td align="right">
+0.3988
+</td>
 <td>
 </td>
 <td>
@@ -1113,6 +1229,18 @@ number_of_words
 </td>
 <td align="right">
 0.5075
+</td>
+<td align="right">
+0.0120
+</td>
+<td align="right">
+0.7365
+</td>
+<td align="right">
+0.1142
+</td>
+<td align="right">
+0.7160
 </td>
 <td>
 </td>
@@ -1129,6 +1257,18 @@ attempt_times
 <td align="right">
 0.3371
 </td>
+<td align="right">
+0.8848
+</td>
+<td align="right">
+0.4610
+</td>
+<td align="right">
+0.2159
+</td>
+<td align="right">
+0.1784
+</td>
 <td>
 </td>
 <td>
@@ -1144,6 +1284,18 @@ completion_times
 <td align="right">
 0.2679
 </td>
+<td align="right">
+0.4082
+</td>
+<td align="right">
+0.9892
+</td>
+<td align="right">
+0.7590
+</td>
+<td align="right">
+0.3347
+</td>
 <td>
 </td>
 <td>
@@ -1158,6 +1310,18 @@ number_of_attempts
 </td>
 <td align="right">
 0.3000
+</td>
+<td align="right">
+0.1818
+</td>
+<td align="right">
+0.2206
+</td>
+<td align="right">
+0.3822
+</td>
+<td align="right">
+0.6593
 </td>
 <td>
 </td>
